src/app/components/chat-core/chat-documents/chat-document-list/chat-document-list.component.scss
.chat-document-list-component {
    p-floatlabel {
        width: 100%;
        display: block;
        margin-bottom: 1em;
    }

    #chat-document-search {
        width: 100%;
        box-sizing: border-box;
    }

    .new-chat-document-btn {
        width: 100%;
        display: block;
        margin-bottom: 1em;
    }

    .new-document-content {
        width: 100%;

        input {
            width: 100%;
        }

        .textarea-container {
            height: 100%;
            width: 100%;
        }

        textarea {
            width: 100%;
            height: 100%;
        }
    }

    .chat-document-title {
        cursor: pointer;
    }

    .chat-document-card-wrapper {
        display: flex;

        .chat-document-card-content {
            flex: 1 1 auto;
        }
    }

    .top-panel {
        ::ng-deep.p-button {
            width: 100%;
        }
    }
}

